--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "sourceMap": true,
     "jsx": "react-jsx"
   },
   "include": [
     "src"
-, "src/components/Templates/LoginPage/components/LoginLabel"  ]
+, "src/components/Templates/LoginPage/components/LoginLabel", "public/assets"  ]
 }
